fix: align fiat balances with each other
hide show more button after it is clicked

--- a/src/components/sidebar/SafeListItem/styles.module.css
+++ b/src/components/sidebar/SafeListItem/styles.module.css
@@ -37,7 +37,7 @@
 .listItemText {
   padding-right: 0;
   flex: none;
-  justify-content: flex-start
+  width: 160px;
 }
 
 .listItemInfo {
